      To use TLS/SSL support you must also install the TLSLite library
      (http://trevp.net/tlslite/). Version 0.3.8 was used for development and
      testing.
    * cfg.log_reverse_dns_lookups [default: True] - you can set this to False
      if rev. dns lookups are broken in your network (leading to long delays
      on page saves). With False, edit-log will only contain IP, not hostname.
    * ?action=sitemap emits a simple google sitemap (XML), listing all your
      wiki pages and the wiki root URL.
    * We use rel="nofollow" for some action links in the hope that some search
      engines don't fetch the targets (if they do, they will just get 403 and
      cause unnecessary traffic).

  Bugfixes:
    * on action "info" page, "revert" link will not be displayed for empty page
      revisions (but you just can delete the current page to get an empty rev.)
    * fix vanishing strike markup after gui editor usage
    * fix deletion of empty Interwiki links ([wiki:MoinMaster: mm entry page])
    * fix mod_python attachment upload bug (thanks to Nick Phillips)
    * fix show_version to show it in the same way as SystemInfo
    * allow "-" in usernames (fixes "Invalid user name" msg)
    * fixed smiley caching bug (smileys didn't change theme)
    * fixed backtrace when user removed css_url entry from user_form_fields
    * Fixed the output of macro and "attachment:" usages of the rst parser.
    * Removed Twisted request object reverse DNS lookup
    * cfg.editor_quickhelp was not parsed with the wiki parser when customized
    * fixed MoinMoin:MoinMoinBugs/GuiEditorDeletesNewBulletText
    * fixed MoinMoin:MoinMoinBugs/HtmlTextConvertTables
    * updated ImageLink macro

  Other changes:
    * we use (again) the same browser compatibility check as FCKeditor uses
      internally, too. So if GUI editor invocation is broken due to browser
      compatibility issues or a wrong browser version check, please file a bug